WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107733
[Freetype] Synthetic bold not applied to fallback fonts properly
https://bugs.webkit.org/show_bug.cgi?id=107733
Summary
[Freetype] Synthetic bold not applied to fallback fonts properly
Martin Robinson
Reported
2013-01-23 13:59:53 PST
When a font falls back per-character synthetic bold fails to apply properly. This is apparent by observing fast/text/international/bold-bengali.html.
Attachments
Patch
(1.03 MB, patch)
2013-01-23 16:18 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2013-01-23 16:18:14 PST
Created
attachment 184337
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-23 16:22:56 PST
Attachment 184337
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/platform/gtk/fast/css/font-face-multiple-faces-expected.png', u'LayoutTests/platform/gtk/fast/css/font-face-synthetic-bold-italic-expected.png', u'LayoutTests/platform/gtk/fast/dom/34176-expected.png', u'LayoutTests/platform/gtk/fast/encoding/denormalised-voiced-japanese-chars-expected.png', u'LayoutTests/platform/gtk/fast/text/bidi-embedding-pop-and-push-same-expected.png', u'LayoutTests/platform/gtk/fast/text/cg-fallback-bolding-expected.png', u'LayoutTests/platform/gtk/fast/text/fallback-traits-fixup-expected.png', u'LayoutTests/platform/gtk/fast/text/international/bidi-LDB-2-CSS-expected.png', u'LayoutTests/platform/gtk/fast/text/international/bidi-LDB-2-HTML-expected.png', u'LayoutTests/platform/gtk/fast/text/international/bidi-LDB-2-formatting-characters-expected.png', u'LayoutTests/platform/gtk/fast/text/international/bold-bengali-expected.png', u'LayoutTests/platform/gtk/fast/text/international/khmer-selection-expected.png', u'LayoutTests/platform/gtk/fast/writing-mode/Kusa-Makura-background-canvas-expected.png', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/freetype/FontPlatformDataFreeType.cpp']" exit_code: 1 LayoutTests/platform/gtk/fast/text/international/bold-bengali-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3
2013-01-28 07:36:43 PST
Comment on
attachment 184337
[details]
Patch Clearing flags on attachment: 184337 Committed
r140967
: <
http://trac.webkit.org/changeset/140967
>
WebKit Review Bot
Comment 4
2013-01-28 07:36:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug