[Freetype] Synthetic bold not applied to fallback fonts properly https://bugs.webkit.org/show_bug.cgi?id=107733

Patch by Martin Robinson <mrobinson@igalia.com> on 2013-01-28
Reviewed by Gustavo Noronha Silva.

Source/WebCore:

No new tests. This is covered by existing pixel tests.

* platform/graphics/freetype/FontPlatformDataFreeType.cpp:
(WebCore::FontPlatformData::FontPlatformData): When we detect a situation in which
we are a bold font, but the Fontconfig pattern does not describe the font as
bold, we should activate synthetic bolding.

LayoutTests:

* platform/gtk/fast/css/font-face-multiple-faces-expected.png:
* platform/gtk/fast/css/font-face-synthetic-bold-italic-expected.png: Added.
* platform/gtk/fast/dom/34176-expected.png: Added.
* platform/gtk/fast/encoding/denormalised-voiced-japanese-chars-expected.png:
* platform/gtk/fast/text/bidi-embedding-pop-and-push-same-expected.png:
* platform/gtk/fast/text/cg-fallback-bolding-expected.png:
* platform/gtk/fast/text/fallback-traits-fixup-expected.png:
* platform/gtk/fast/text/international/bidi-LDB-2-CSS-expected.png:
* platform/gtk/fast/text/international/bidi-LDB-2-HTML-expected.png:
* platform/gtk/fast/text/international/bidi-LDB-2-formatting-characters-expected.png:
* platform/gtk/fast/text/international/bold-bengali-expected.png:
* platform/gtk/fast/text/international/khmer-selection-expected.png:
* platform/gtk/fast/writing-mode/Kusa-Makura-background-canvas-expected.png:

Canonical link: https://commits.webkit.org/126276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140967 268f45cc-cd09-0410-ab3c-d52691b4dbfc